--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
+
+/* RESET */
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/** Global Styles **/
+body {
+  margin: 0;
+  font-family: 'Ubuntu', sans-serif;
+  height: 100vh;
+  width: 100vw;
+  background-color:  hsl(217, 100%, 97%);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: grid;
+  place-items: center;
+}
+
+.go-back-2 {
+  background: none !important;
+  color: hsl(231, 11%, 63%)!important;
+  border: none !important;
+  font-weight: 700 !important;
+}
+
+/* ### Primary
+
+- Marine blue: hsl(213, 96%, 18%)
+- Purplish blue: hsl(243, 100%, 62%)
+- Pastel blue: hsl(228, 100%, 84%)
+- Light blue: hsl(206, 94%, 87%)
+- Strawberry red: hsl(354, 84%, 57%)
+
+### Neutral
+
+- Cool gray: hsl(231, 11%, 63%)
+- Light gray: hsl(229, 24%, 87%)
+- Magnolia: hsl(217, 100%, 97%)
+- Alabaster: hsl(231, 100%, 99%)
+- White: hsl(0, 0%, 100%) */
+
+
+
+/* Second Section */
+/* =====================second page ====================== */
+.card {
+  width: 10rem;
+  height: 12rem;
+  background: white;
+  margin: .5rem;
+  flex: 1;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 1rem;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.card-active {
+  border: 2px solid hsl(228, 100%, 84%);
+  background-color: hsla(228, 100%, 84%, 0.274);
+}
+.card-container {
+  display:flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
+}
+.card-heading {
+  font-size: 1.1rem;
+  font-weight: 700;
+  color: rgb(2, 41, 90);
+
+}
+.card-p {
+  margin-top: .5rem;
+  color: hsl(231, 11%, 63%);
+}
+.second-page-content-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.summary-section {
+  background-color: cadetblue;
+  height: 30vh;
 }
